php-src/tests/classes/constants_visibility_003.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory
string(12) "privateConst"
string(12) "privateConst"

Fatal error: Uncaught Error: Cannot access private const A::privateConst in /root/php-src/tests/classes/constants_visibility_003.php:14
Stack trace:
#0 /root/php-src/tests/classes/constants_visibility_003.php(14): constant('A::privateConst')
#1 {main}
  thrown in /root/php-src/tests/classes/constants_visibility_003.php on line 14